--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,4 @@ twitter_username: hoyd
 github_username:  orjanv
 
 # Build settings
-markdown: redcarpet
-redcarpet:
-  extensions: [tables]
+markdown: kramdown
