--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,8 @@ twitter_username: hoyd
 github_username:  orjanv
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+
+redcarpet:
+    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", 
+"with_toc_data"]
