--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,7 @@ github_username:  orjanv
 markdown: redcarpet
 
 redcarpet:
-    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", 
-"with_toc_data"]
+    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data"]
+
+kramdown:
+  input: GFM
