--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ twitter_username: hoyd
 github_username:  orjanv
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
 
 redcarpet:
     extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data"]
 
 kramdown:
-  input: GFM
+    input: GFM
