--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: orjan@hoyd.net
 description: > # this means to ignore newlines until "baseurl:"
  Hvis du finner et bilde fra et sted, en gate med eller uten mennesker
  og tar et bilde på nøyaktig samme sted idag, kan du legge de på hverandre
- og få en spennende effekt. En slags tidsreise. 
+ og få en spennende effekt. En slags tidsreise..
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://orjanv.github.io" # the base hostname & protocol for your site
 twitter_username: hoyd
