--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-encoding: UTF-8
+# encoding: UTF-8
 title: The time machine
 email: orjan@hoyd.net
 description: > # this means to ignore newlines until "baseurl:"
